--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 							<li><a href="#"><i class="fas fa-blog"></i><br><span>블로그</span></a></li>
 							<li><a href="#"><i class="fab fa-instagram"></i><br><span>인스타그램</span></a></li>
 						</ul>
-                       <ul class="menu_list">
+                       <ul class="menu_list clear">
                        		<li class="more">
-                       			<a href="story.html">CAFFE PASCUCCI</a>
+                       			<a href="story.html" data-hover="CAFFE-PASCUCCI">CAFFE-PASCUCCI</a>
                        			<ul>
                        				<li><a href="#">전통과 전통의 만남</a></li>
                        				<li><a href="#">한국파스쿠찌</a></li>
@@ -55,7 +55,7 @@
                        			</ul>
                        		</li>
                        		<li class="more">
-                       			<a href="menu.html">MENU</a>
+                       			<a href="menu.html" data-hover="MENU">MENU</a>
                        			<ul>
                        				<li><a href="#">Coffee</a></li>
                        				<li><a href="#">Beverage</a></li>
@@ -64,7 +64,7 @@
                        			</ul>
                        		</li>
                        		<li class="more">
-                       			<a href="event.html">EVENT&amp;TALK</a>
+                       			<a href="event.html" data-hover="EVENT&TALK">EVENT&amp;TALK</a>
                        			<ul>
                        				<li><a href="#">진행중인 이벤트</a></li>
                        				<li><a href="#">당첨자 발표</a></li>
@@ -72,10 +72,10 @@
                        			</ul>
                        		</li>
                        		<li>
-                       			<a href="store.html">STORE</a>
+                       			<a href="store.html" data-hover="STORE">STORE</a>
                        		</li>
                        		<li class="more">
-                       			<a href="customer.html">CUSTOMER</a>
+                       			<a href="customer.html" data-hover="CUSTOMER">CUSTOMER</a>
                        			<ul>
                        				<li><a href="#">제휴안내</a></li>
                        				<li><a href="#">자주하는질문</a></li>
@@ -228,16 +228,76 @@
 				<div class="inner_s">
 					<div class="banner_slide">
 						<ul class="clear">
-							<li><a href="#"><img src="img/main/story_img01.jpg" alt="sns이미지1"></a></li>
-							<li><a href="#"><img src="img/main/story_img02.jpg" alt="sns이미지2"></a></li>
-							<li><a href="#"><img src="img/main/story_img03.jpg" alt="sns이미지3"></a></li>
-							<li><a href="#"><img src="img/main/story_img04.jpg" alt="sns이미지4"></a></li>
-							<li><a href="#"><img src="img/main/story_img05.jpg" alt="sns이미지5"></a></li>
-							<li><a href="#"><img src="img/main/story_img06.jpg" alt="sns이미지6"></a></li>
-							<li   class="sns_pc"><a href="#"><img src="img/main/story_img07.jpg" alt="sns이미지7"></a></li>
-							<li class="sns_pc"><a href="#"><img src="img/main/story_img08.jpg" alt="sns이미지8"></a></li>
-							<li class="sns_pc"><a href="#"><img src="img/main/story_img09.jpg" alt="sns이미지9"></a></li>
-							<li class="sns_pc"><a href="#"><img src="img/main/story_img10.jpg" alt="sns이미지10"></a></li>
+							<li><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>깜짝 퀴즈 이벤트</p>
+								</div>
+								<img src="img/main/story_img01.jpg" alt="정답은?">
+							</a></li>
+							<li><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>스트롱베리</p>
+								</div>
+								<img src="img/main/story_img02.jpg" alt="딸기와 라즈베리 파워충전">
+							</a></li>
+							<li><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>달콤한 매력</p>
+								</div>
+								<img src="img/main/story_img03.jpg" alt="아다지오 원두의 그윽한 매력">
+							</a></li>
+							<li><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>빙수를 품은 그라니따 </p>
+								</div>
+								<img src="img/main/story_img04.jpg" alt="시원 달콤한 그라니따">
+							</a></li>
+							<li><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>배와 향긋한 생강</p>
+								</div>
+								<img src="img/main/story_img05.jpg" alt="Ginger Crush">
+							</a></li>
+							<li><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>망고 요거트 그라니따 </p>
+								</div>
+								<img src="img/main/story_img06.jpg" alt="젤라또를 골라먹는 그라니따">
+							</a></li>
+							<li   class="sns_pc"><a href="#">
+							<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>골라먹는 젤라또</p>
+								</div>
+								<img src="img/main/story_img07.jpg" alt="젤라또">
+							</a></li>
+							<li class="sns_pc"><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>머랭케익 3종</p>
+								</div>
+								<img src="img/main/story_img08.jpg" alt="달콤한 마음">
+							</a></li>
+							<li class="sns_pc"><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>우유와 향긋한 홍차</p>
+								</div>
+								<img src="img/main/story_img09.jpg" alt="청순밀크티보틀">
+							</a></li>
+							<li class="sns_pc"><a href="#">
+								<div class="hover">
+									<p><i class="fab fa-instagram"><span>인스타그램</span></i></p>
+									<p>티라미수크레이프</p>
+								</div>
+								<img src="img/main/story_img10.jpg" alt="티라미수크레이프">
+							</a></li>
 						</ul>
 					</div>
 					<div class="control">
@@ -286,8 +346,8 @@
 						<p>COPYRIGHT 2019 THE CAFFEE PASCUCCI</p>
                     </address>
                 </div>
-                <div class="foot_btn">
-                	<ul class="foot_sns">
+                <div class="foot_btn clear">
+                	<ul class="foot_sns clear">
 						<li><a href="#"><i class="fab fa-facebook-f"><span>페이스북</span></i></a></li>
 						<li><a href="#"><i class="fab fa-twitter"><span>트위터</span></i></a></li>
 						<li><a href="#"><i class="fas fa-blog"><span>블로그</span></i></a></li>
@@ -314,7 +374,10 @@ $('#sns ul.sns_list02 li').each(function(i) {
 	$(this).find('a').css({'transition': '0.5s all ' + (i * 0.3) + 's'})
 	$(this).find('a i').css({'transition': '0.5s all ' + (i * 0.3) + 's'})
 })
-
+	
+$('#sns .inner_s .banner_slide li').each(function(i) {
+	$(this).css({'transition': '0.3s all ' + (i * 0.2) + 's'})
+})
 	
 	
 var scrollTop = 0;
@@ -328,6 +391,8 @@ $(window).scroll(function() {
     checkShow('#menu ul.menu_img li a');
     checkShow('#menu ul.menu_img li a h3');
     checkShow('#sns ul.sns_list02 li a');
+    checkShow('#sns .inner_s .banner_slide li');
+    checkShow('#store article');
 });
     
 function checkShow(selector) {
